# 网站名称修改成"匹配游戏" # 日志增加时间

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# MasterXiao-AI 环境变量配置
+# 匹配游戏 环境变量配置
 
 # 服务器配置
 PORT=3000
@@ -8,10 +8,10 @@ NODE_ENV=development
 FRONTEND_URL=http://localhost:5173
 
 # JWT 密钥
-JWT_SECRET=masterxiao-secret-key-2024-change-in-production
+JWT_SECRET=matching-game-secret-key-2024-change-in-production
 
 # MongoDB（后续使用）
-# MONGODB_URI=mongodb://localhost:27017/masterxiao
+# MONGODB_URI=mongodb://localhost:27017/matching-game
 
 # 短信服务（后续使用）
 # SMS_ACCESS_KEY=your-access-key
