# 项目结构调整

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "dev": "vite --config web/client/vite.config.js web/client",
+    "build": "vite build --config web/client/vite.config.js web/client",
+    "preview": "vite preview --config web/client/vite.config.js web/client",
     "server": "node server/index.js",
     "server:dev": "node --watch server/index.js",
     "start": "npm run server"
