--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "preview": "vite preview --config web/client/vite.config.js web/client",
     "server": "node server/index.js",
     "server:dev": "node --watch server/index.js",
-    "start": "npm run server"
+    "server:prod": "node server/index.js",
+    "start": "npm run server",
+    "start:dev": "cross-env NODE_ENV=development node server/index.js",
+    "start:prod": "cross-env NODE_ENV=production node server/index.js",
+    "pm2:start": "cross-env NODE_ENV=production pm2 start server/index.js --name masterxiao-ai",
+    "pm2:restart": "pm2 restart masterxiao-ai",
+    "pm2:stop": "pm2 stop masterxiao-ai",
+    "pm2:logs": "pm2 logs masterxiao-ai"
   },
   "devDependencies": {
+    "cross-env": "^10.1.0",
     "vite": "^7.2.4"
   },
   "dependencies": {
