--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
+    "sql.js": "^1.13.0",
     "uuid": "^13.0.0"
   }
 }
