--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "flatpickr": "^4.6.13",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "sql.js": "^1.13.0",
