--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "flatpickr": "^4.6.13",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "sql.js": "^1.13.0",
